<resources>
    <string name="app_name">AppPortFolio</string>
    <string name="action_settings">Settings</string>

    <string name="my_nano_degree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">Xyz Reader</string>
    <string name="capstone">Capstone:My Own App</string>


    <string name="toast_launch_spotify">This button will launch my Spotify Streamer App!</string>
    <string name="toast_launch_score_app">This button will launch my Scores App!</string>
    <string name="toast_launch_library_app">This button will launch my Library App!</string>
    <string name="toast_launch_build_it_bigger">This button will launch my Build it Bigger App!</string>
    <string name="toast_launch_xyz_reader_app">This button will launch my XYZ Reader App!</string>
    <string name="toast_launch_capstone_app">This button will launch my Capstone App!</string>
    <string name="message_context_cannot_null">Message and context cannot be null</string>
</resources>
